Adding stats endpoints
